--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="220dp"
         android:text="@string/feliz_navidad"
         android:textColor="@color/rojo"
         android:textSize="45sp"
@@ -33,7 +33,7 @@
         android:text="@string/de_parte_de"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="460dp"
+        android:layout_marginTop="450dp"
         android:textColor="@color/rojo"
         android:textSize="35sp"
         android:textStyle="bold"/>
@@ -45,10 +45,19 @@
         android:text="@string/andrea"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="480dp"
         android:textColor="@color/rojo"
         android:textSize="35sp"
         android:textStyle="bold"/>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="131dp"
+        android:layout_height="159dp"
+        app:srcCompat="@drawable/burro"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="280dp"/>
 
 
 </RelativeLayout>
